fix: add z-index to nav bar dropdown items

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -44,6 +44,7 @@
   opacity: 0;
   position: absolute;
   left: 0;
+  z-index: 1;
   top: calc(100% + 8px);
   visibility: hidden;
   background-color: #fff;
